k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: library
  labels:
    app.kubernetes.io/name: library-microservices
