k8s/admin-service-svc.yaml
# Admin Service Service
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: library
spec:
  selector:
    app: admin-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
  type: ClusterIP
